--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_confirm_custom.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_confirm_custom.html
@@ -27,7 +27,7 @@
                         <button onclick="changeColor(body)" class="btn btn-outline-light" type="submit">Modo Oscuro</button>
                     </form>
                 </div>
-                <a href="{% url 'carrito' %}">
+                <a href="{% url 'miCarrito' %}">
                     <img src="{% static 'imagenes/carrito_white.png'%}" alt="" class="logo">
                 </a>
                 <div class="dropdown"></div>
