--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/base.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load humanize %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,11 +8,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tu Tienda{% endblock %}</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <!-- Icono de la página -->
     <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+    
+    <!-- CSS base común para todas las páginas -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    
+    <!-- Bloque para incluir CSS específicos de las vistas, como el de inicio_sesion -->
+    {% block head %}{% endblock %}
+    
     <script src="{% static 'js/home.js' %}"></script>
 </head>
+
 <body style="background-color: white;"> 
     <!-- Header -->
     <div class="barra-arcoiris">
@@ -96,17 +108,11 @@
             </div>
             <div class="text-center mt-4">
                 <ul class="list-unstyled list-inline">
-                    
-                    
                 </ul>
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-<!-- creacion del base para todas las paginas con el diseño-->
