--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
@@ -8,12 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
+    <link rel="icon" type="image/png" href="{% static 'imagenes/' %}favicon.png">
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css'%}">
     <script src="{% static 'js/home.js' %}"></script>
-    <style>
-       
-    </style>
 </head>
 
 <div class="barra-arcoiris">
@@ -27,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="{% url 'home' %}"> <!-- Cambia 'home' por el nombre de tu URL correspondiente -->
+            <a href="{% url 'home' %}">
                 <img src="{% static 'imagenes/Logo_mauri_agency.jpeg' %}" class="logo" alt="Logo de Mauri Agency">
             </a>
             <div class="collapse navbar-collapse" id="navbarToggler">
@@ -37,7 +34,6 @@
                         <button class="btn btn-outline-light" type="submit">Buscar</button>
                     </form>
                 </div>
-                <!-- Corazón creado con CSS -->
                 <a href="{% url 'deseados' %}">
                     <img src="{% static 'imagenes/love_icon.png' %}" alt="deseados" class="logo">
                 </a>
@@ -49,33 +45,38 @@
                         <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg' %}" class="logo" alt="Usuario">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li>
-                            <a class="dropdown-item" href="{% url 'inicio_sesion' %}">
-                                <img src="{% static 'imagenes/iniciar_sesion_icono.png' %}" alt="Iniciar sesión" style="width: 20px; margin-right: 8px;">
-                                Iniciar Sesión
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'registro' %}">
-                                <img src="{% static 'imagenes/registrarse_icono.png' %}" alt="Registrarse" style="width: 20px; margin-right: 8px;">
-                                Registrarse
-                            </a>
-                        </li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'cerrar_sesion' %}">
-                                <img src="{% static 'imagenes/cerrar_sesion_icono.png' %}" alt="Cerrar sesión" style="width: 20px; margin-right: 8px;">
-                                Cerrar Sesión
-                            </a>
-                        </li>
+                        {% if request.user.is_authenticated %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'mis_compras' %}">
+                                    <img src="{% static 'imagenes/mis_compras_icono.png' %}" alt="Mis Compras" style="width: 20px; margin-right: 8px;">
+                                    Mis Compras
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'cerrar_sesion' %}">
+                                    <img src="{% static 'imagenes/cerrar_sesion_icono.png' %}" alt="Cerrar Sesión" style="width: 20px; margin-right: 8px;">
+                                    Cerrar Sesión
+                                </a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'inicio_sesion' %}">
+                                    <img src="{% static 'imagenes/iniciar_sesion_icono.png' %}" alt="Iniciar Sesión" style="width: 20px; margin-right: 8px;">
+                                    Iniciar Sesión
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'registro' %}">
+                                    <img src="{% static 'imagenes/registrarse_icono.png' %}" alt="Registrarse" style="width: 20px; margin-right: 8px;">
+                                    Registrarse
+                                </a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
         </div>
     </nav>
-</body>
-</html>
-
 
     <!-- Navbar secundaria -->
     <div class="menu">
@@ -170,15 +171,9 @@
             <div class="carrusel-track" id="track">
                 {% for producto in productos_1 %}
                 <div class="carrusel">
-<<<<<<< HEAD
-                    <div>
-                        <a href="{% url 'detalle_producto' producto.id %}">
-                            <h4><small>{{ producto.nombre }}</small> ${{ producto.precio }}</h4>
-=======
                     <div class="producto">
-                        <a href="{% url 'carritoid' producto.id %}">
+                        <a href="{% url 'detalle_producto' producto.id %}">
                             <h4><small>{{ producto.nombre }}</small> ${{ producto.precio|intcomma }}</h4>
->>>>>>> e5b0af839031bbe5af40f7913f7d8ea1a51aec12
                             <picture>
                                 <img src="{% static 'imagenes/' %}{{ producto.imagen }}" alt="{{ producto.nombre }}">
                             </picture>
@@ -240,7 +235,7 @@
                 {% for producto in productos_2 %}
                 <div class="carrusel">
                     <div class="producto">
-                        <a href="{% url 'carritoid' producto.id %}">
+                        <a href="{% url 'detalle_producto' producto.id %}">
                             <h4><small>{{ producto.nombre }}</small> ${{ producto.precio }}</h4>
                             <picture>
                                 <img src="{% static 'imagenes/' %}{{ producto.imagen }}" alt="{{ producto.nombre }}">
