--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/detalle_producto.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/detalle_producto.html
@@ -56,6 +56,58 @@
             </div>
         </div>
     </div>
+    <!-- Especificaciones tecnicas -->
+    <div class="container">
+        <div class="row">
+            <div class="card" >
+                <div class="card-body">
+                    <div class="col-12">
+                        <div class="specifications-table">
+                            <h3>Especificaciones del Producto</h3>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Característica</th>
+                                        <th>Detalle</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Resolución de pantalla</td>
+                                        <td>Super Retina XDR</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Memoria RAM</td>
+                                        <td>6GB</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sistema operativo</td>
+                                        <td>iOS</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Capacidad de almacenamiento</td>
+                                        <td>128 GB</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Cámara posterior</td>
+                                        <td>12 MP</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Resistente al agua</td>
+                                        <td>IP68 (Protegido contra inmersión)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alto</td>
+                                        <td>15.7 cm</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <!--___________________Productos Relacionados, Carrusel de tarjetas_____________________-->
 <div class="container">
     <div class="row">
