--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_form_custom.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_form_custom.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
@@ -6,122 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restablecer Contraseña</title>
+    {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/password_reset_form_custom.css' %}">
+    {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+{% block content %}
 <body>
-    <!-- Primer nav -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="height: 70px;">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <img src="{% static 'imagenes/Logo_mauri_agency.jpeg'%}" class="logo">
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <div class="d-flex mx-auto align-items-center">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 tamano_bus" type="search" placeholder="" aria-label="Search" style="height: 40px;">
-                        <button class="btn btn-outline-light" type="submit">Buscar</button>
-                        <button onclick="changeColor(body)" class="btn btn-outline-light" type="submit">Modo Oscuro</button>
-                    </form>
-                </div>
-                <a href="{% url 'miCarrito' %}">
-                    <img src="{% static 'imagenes/carrito_white.png'%}" alt="" class="logo">
-                </a>
-                <div class="dropdown"></div>
-                    <a class="dropdown-toggle ancho_nav" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg' %}" class="logo">
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li>
-                            <a class="dropdown-item" href="{% url 'inicio_sesion' %}">
-                                <img src="{% static 'imagenes/iniciar_sesion_icono.png' %}" alt="" style="width: 20px; margin-right: 8px;">
-                                Iniciar Sesión
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'registro' %}">
-                                <img src="{% static 'imagenes/registrarse_icono.png' %}" alt="" style="width: 20px; margin-right: 8px;">
-                                Registrarse
-                            </a>
-                        </li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'cerrar_sesion' %}">
-                                <img src="{% static 'imagenes/cerrar_sesion_icono.png' %}" alt="" style="width: 20px; margin-right: 8px;">
-                                Cerrar Sesión
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                </a>
-            </div>
-        </div>
-    </nav>
-    <!-- Segundo nav -->
-    <nav class="navbar navbar-expand-lg bg-body-secondary" style="height: 35px;">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="NVD">
-                <div class="d-flex mx-auto align-items-center">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Apple
-                                </a>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Action</a></li>
-                                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                                  <li><hr class="dropdown-divider"></li>
-                                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                              </li>
-                              <li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                      Computadores
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><hr class="dropdown-divider"></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                  </li>
-                            </li>
-                            <li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                      Telefonos
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><hr class="dropdown-divider"></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                  </li>
-                            </li>
-                            <li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                      Accesorios
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><hr class="dropdown-divider"></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                  </li>
-                            </li>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
-
     <div class="card p-5" >
         <h1>Restablecer Contraseña</h1>
         <p>Por favor, ingresa tu correo electrónico para recibir un enlace de recuperación.</p>
@@ -132,96 +24,8 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    {% endblock %}
 <!--___________________________ Footer _______________________________-->
-<footer class="bg-light text-dark pt-5 pb-4">
-    <div class="container text-center text-md-start">
-        <div class="row text-center text-md-start">
 
-            <div class="col-md-3 col-lg-3 col-lx-3 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Nosotros</h5>
-                <hr class="mb-4">
-                <p>
-                    Pagina web diseñada y construida con el fin de 
-                    formar una comunidad de entuciastas en la 
-                    tecnologia
-                </p>
-            </div>
-
-            <div class="col-md-2 col-lg-2 col-xl-2 ms-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Catalogo</h5>
-                <hr class="mb-4">
-                <p>
-                    <a href="#" class="text-dark">Apple</a>
-                </p>
-                <p>
-                    <a href="#" class="text-dark">Computadoras</a>
-                </p>
-                <p>
-                    <a href="#" class="text-dark">Telefonos</a>
-                </p>
-                <p>
-                    <a href="#" class="text-dark">Accesorios</a>
-                </p>
-            </div>
-
-            <div class="col-md-2 col-lg-2 col-xl-2 ms-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Has dinero</h5>
-                <hr class="mb-4">
-                <p>
-                    <a href="#" class="text-dark">Promociona tu negocio</a>
-                </p>
-                <p>
-                    <a href="#" class="text-dark">Tus ordenes</a>
-                </p>
-                <p>
-                    <a href="#" class="text-dark">Manejo de cuenta</a>
-                </p>
-            </div>
-
-            <div class="col-md-2 col-lg-2 col-xl-2 ms-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Contacto</h5>
-                <hr class="mb-4">
-                <p>
-                    <li class="fas fa-home me-3"></li> Chile - Melipilla
-                </p>
-                <p>
-                    <li class="fas fa-envelope me-3"></li> Test@gmail.com
-                </p>
-                <p>
-                    <li class="fas fa-phone me-3"></li> +56911111111    
-                </p>
-            </div>
-
-            <hr class="mb-4">
-
-            <div class="text-center mb-2">
-                <p>
-                    Copyright Todos los derechos reservados
-                    <a href="#" class="text-primary"> <strong>Test</strong> </a>
-                </p>
-            </div>
-
-            <div class="text-center">
-                <ul class="list-unstyled list-inline">
-                    <li class="list-inline-item"> 
-                        <a href="#" class="text-dark"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item"> 
-                        <a href="#" class="text-dark"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item"> 
-                        <a href="#" class="text-dark"><i class="fab fa-linkedin-in"></i></a>
-                    </li>
-                    <li class="list-inline-item"> 
-                        <a href="#" class="text-dark"><i class="fab fa-instagram"></i></a>
-                    </li>
-
-                </ul>
-
-            </div>
-        </div>
-    </div>
-</footer>
 </body>
 </html>
