--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/home.css
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/home.css
@@ -55,11 +55,6 @@ a:hover .logo {
 }
 
 
-
-
-
-
-
 .navbar  {
     position: sticky; /* Cambia a sticky */
     top: 0; /* Se queda en la parte superior */
@@ -239,12 +234,20 @@ a:hover .logo {
 }
 
 
-
-
-
-
 #carrusel_css {
-    margin: 0 auto;
+    margin: auto;
+    margin-top: 30px;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    width: 100%;
+}
+#carrusel_css_2 {
+    margin: auto;
+    margin-top: 30px;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
@@ -484,9 +487,6 @@ a {
     color: #333; /* Color del texto */
 }
 
-
-
-
 .marcas {
     text-align: center; /* Centra el contenido */
     padding: 20px 0; /* Espacio arriba y abajo del contenedor */
@@ -576,3 +576,70 @@ footer .row {
     display: flex;
     align-items: flex-start; /* Alinea el logo verticalmente al centro con el resto del contenido */
 }
+
+/* deedw */
+/* Ajustes para el formulario de búsqueda dentro del menú lateral */
+.sidebar form input {
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #555;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+/* Asegura que los enlaces dropdown en el menú lateral tengan buen estilo */
+.sidebar .dropdown-menu {
+    background-color: #444;
+    border: none;
+}
+
+.sidebar .dropdown-menu a {
+    color: #fff;
+}
+
+.sidebar .dropdown-menu a:hover {
+    background-color: #555;
+}
+
+/* Ajustes de estilo generales para que coincidan con el resto del menú */
+.sidebar ul li {
+    margin-bottom: 10px;
+}
+
+/* css menu lateral */
+.menu-lateral {
+    background-color: #000; /* Fondo negro */
+    color: #fff; /* Texto blanco */
+}
+
+.menu-lateral .btn-close-white {
+    filter: invert(1); /* Cierra el botón en blanco */
+}
+
+.menu-lateral a {
+    color: #fff; /* Enlaces en blanco */
+}
+
+.menu-lateral a:hover {
+    color: #ccc; /* Enlaces en gris al pasar el mouse */
+}
+
+.menu-lateral .form-control {
+    background-color: #333; /* Fondo gris oscuro del campo de búsqueda */
+    color: #fff; /* Texto blanco del campo de búsqueda */
+    border: 1px solid #555; /* Borde gris */
+}
+
+.menu-lateral .btn-outline-light {
+    color: #fff; /* Texto blanco en el botón */
+    border-color: #fff; /* Borde blanco */
+}
+
+.menu-lateral .btn-outline-light:hover {
+    background-color: #555; /* Fondo gris oscuro al pasar el mouse */
+    color: #fff;
+}
+
+
+/* fin css menu lateral */
+
