--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/base.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/base.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tu Tienda{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% block extra_css %}{% endblock %}
     <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <script src="{% static 'js/home.js' %}"></script>
 </head>
 <body style="background-color: white;"> 
@@ -17,48 +18,90 @@
     <div class="barra-arcoiris">
         <h2 class="texto-arcoiris">¡Bienvenido a Nuestra Tienda!</h2>
     </div>
-
-    <!-- Navbar principal -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="{% url 'home' %}">
-                <img src="{% static 'imagenes/Logo_mauri_agency.jpeg' %}" class="logo" alt="Logo de Mauri Agency">
-            </a>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <div class="d-flex mx-auto align-items-center">
-                    <form method="GET" action="{% url 'buscar' %}" class="d-flex">
-                        <input class="form-control me-2 tamano_bus" type="text" name="q" placeholder="Buscar productos..." aria-label="Search" style="width: 500px;">
-                        <button class="btn btn-outline-light" type="submit">Buscar</button>
-                    </form>
-                </div>
-                <a href="{% url 'deseados' %}"><img src="{% static 'imagenes/love_icon.png' %}" alt="deseados" class="logo"></a>
-                <a href="{% url 'miCarrito' %}"><img src="{% static 'imagenes/carrito_white.png' %}" alt="Carrito" class="logo"></a>
-                <div class="dropdown">
-                    <a class="dropdown-toggle ancho_nav" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg' %}" class="logo" alt="Usuario">
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="{% url 'inicio_sesion' %}">Iniciar Sesión</a></li>
-                        <li><a class="dropdown-item" href="{% url 'registro' %}">Registrarse</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a></li>
-                    </ul>
-                </div>
+ <!-- Navbar principal -->
+ <nav class="navbar navbar-expand-lg bg-body-tertiary" style="z-index: 1030;">
+    <a href="{% url 'home' %}">
+        <img src="{% static 'imagenes/Logo_mauri_agency.jpeg' %}" class="logo" alt="Logo de Mauri Agency">
+    </a>
+    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-none d-lg-flex justify-content-end">
+        <!-- Buscador -->
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <div class="d-flex mx-auto align-items-center">
+                <form method="GET" action="{% url 'buscar' %}" class="d-flex">
+                    <input class="form-control me-2 tamano_bus" type="text" name="q" placeholder="Buscar productos..." aria-label="Search" style="width: 500px;">
+                    <button class="btn btn-outline-light" type="submit">Buscar</button>
+                </form>
             </div>
+        <!-- Iconos -->
+        <a href="{% url 'deseados' %}">
+            <img src="{% static 'imagenes/love_icon.png' %}" alt="deseados" class="logo">
+        </a>
+        <a href="{% url 'miCarrito' %}">
+            <img src="{% static 'imagenes/carrito_white.png' %}" alt="Carrito" class="logo">
+        </a>
+        <div class="dropdown">
+            <a class="dropdown-toggle ancho_nav" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg' %}" class="logo" alt="Usuario">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                <li><a class="dropdown-item" href="{% url 'inicio_sesion' %}">Iniciar Sesión</a></li>
+                <li><a class="dropdown-item" href="{% url 'registro' %}">Registrarse</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a></li>
+            </ul>
         </div>
-    </nav>
-
-    <!-- Navbar secundaria -->
-    <div class="menu">
-        <div class="menu-item"><a href="{% url 'buscar' %}?q=Mac">Mac</a></div>
-        <div class="menu-item"><a href="{% url 'buscar' %}?q=Notebook">Computadores</a></div>
-        <div class="menu-item"><a href="{% url 'buscar' %}?q=celulares">Teléfonos</a></div>
-        <div class="menu-item"><a href="{% url 'buscar' %}?q=Accesorios">Accesorios</a></div>
     </div>
+</nav>
 
+<!-- Menú lateral Offcanvas -->
+<div class="offcanvas offcanvas-start menu-lateral" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasMenuLabel">Menú</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+        <!-- Buscador -->
+        <form method="GET" action="{% url 'buscar' %}" class="d-flex mb-3">
+            <input class="form-control me-2" type="text" name="q" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Buscar</button>
+        </form>
+        
+        
+        
+        <!-- Deseados -->
+        <div class="mb-3">
+            <a href="{% url 'deseados' %}" class="text-white d-flex align-items-center">
+                <img src="{% static 'imagenes/love_icon.png' %}" alt="deseados" class="logo me-2">
+                Favoritos
+            </a>
+        </div>
+        
+        <!-- Carrito -->
+        <div class="mb-3">
+            <a href="{% url 'miCarrito' %}" class="text-white d-flex align-items-center">
+                <img src="{% static 'imagenes/carrito_white.png' %}" alt="Carrito" class="logo me-2">
+                Carrito
+            </a>
+        </div>
+        
+        <!-- Usuario -->
+        <div>
+            <a class="dropdown-toggle text-white d-flex align-items-center" href="#" id="userDropdownOffcanvas" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg' %}" class="logo me-2" alt="Usuario">
+                Usuario
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="userDropdownOffcanvas">
+                <li><a class="dropdown-item" href="{% url 'inicio_sesion' %}">Iniciar Sesión</a></li>
+                <li><a class="dropdown-item" href="{% url 'registro' %}">Registrarse</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
     <!-- Contenido principal -->
     <div class="container my-4">
         {% block content %}{% endblock %}
