--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/buscar.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/buscar.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +18,7 @@
 
   gtag('config', 'G-449T3X34HB');
 </script>
+
 <body>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
@@ -136,7 +138,7 @@
         </div>
     </nav>
 
-
+    {% block content %}
 
     <div class="container">
         <h2 class="results-title">Resultados para "{{ query }}"</h2>
@@ -160,7 +162,7 @@
             <p class="no-results">No se encontraron productos.</p>
         {% endif %}
     </div>
-
+    {% endblock %}
     <footer class="bg-light text-dark pt-5 pb-4">
         <div class="container text-center text-md-start">
             <div class="row text-center text-md-start">
