--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_admin.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_admin.html
@@ -81,11 +81,12 @@
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
-            <div class="message {{ message.tags }}">{{ message }}</div>
+            <div class="message {{ message.tags }}" style="color: black;">{{ message }}</div>
         {% endfor %}
     </div>
-{% endif %}
+    {% endif %}
 
+    
     <div class="dashboard-container">
         <h1 class="dashboard-title">Dashboard - Agregar Producto</h1>
         
@@ -113,11 +114,24 @@
                     <label for="descripcion">Descripción</label>
                     {{ form.descripcion }}
                 </div>
+                <div class="form-group">
+                    <label for="stock_actual">Stock actual</label>
+                    {{ form.stock_actual }}
+                </div>
                 <button type="submit" class="submit-btn">Agregar Producto</button>
             </form>
         </div>
     </div>
-    
+    {% if messages %}
+    <div class="alert-container">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" role="alert" style="color: black;">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+ 
     
     <div class="product-cards">
         {% for producto in productos %}
@@ -140,17 +154,5 @@
         {% endfor %}
     </div>
 
-
-
-    {% if messages %}
-    <div class="alert-container">
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    </div>
-    {% endif %}
- 
 </body>
 </html>
